--- a/README.adoc
+++ b/README.adoc
@@ -161,7 +161,7 @@ Expect the following response headers and values if the simple CORS request is s
 | *Header* | *Value*
 | Access-Control-Allow-Origin | Indicates whether the response can be shared with requesting code from the given origin (server name). The value is set to `openliberty.io`
 | Access-Control-Allow-Credentials | Indicates whether the response can be exposed to the frontend code. The value is set to [hotspot=15 file=0]`true`
-| Access-Control-Expose-Headers | Indicates which headers can be exposed. The value is set to [hotspot=16 file=0]`MyHeader`.
+| Access-Control-Expose-Headers | HTTP Headers that can be exposed. The value is set to [hotspot=16 file=0]`MyHeader`.
 |===
 
 Go to the `start/` directory and run the following command:
@@ -205,9 +205,9 @@ The preflight CORS configuration has different values than the simple CORS confi
 |===
 | *Header* | *Value*
 | [hotspot=18 file=0]`domain`|The value is set to `/configurations/preflight` because the `domain` is a different endpoint.
-| [hotspot=19 file=0]`allowedOrigins`| The value is set to an asterisk (*) to allow requests from all origins.
-| [hotspot=20 file=0]`allowedMethods`| The value is set to `OPTIONS, DELETE`.
-| [hotspot=21 file=0]`allowCredentials`| The value is set to `true`.
+| [hotspot=19 file=0]`allowedOrigins`| Origins that are allowed to access the endpoint. The value is set to an asterisk (*) to allow requests from all origins.
+| [hotspot=20 file=0]`allowedMethods`| HTTP methods that a client is allowed to use when it makes requests to the endpoint. The value is set to `OPTIONS, DELETE`.
+| [hotspot=21 file=0]`allowCredentials`| A boolean that indicates whether the user credentials can be included in the request. The value is set to `true`.
 |===
 
 The follow attributes were added:
@@ -233,19 +233,19 @@ The request is an [hotspot=39 file=1]`OPTIONS` HTTP request with the following h
 |===
 | *Header* | *Value*
 | Origin | anywebsiteyoulike.com
-| Access-Control-Request-Method | Indicates which HTTP method will be used when the actual request is made. The value is set to [hotspot=20 file=0]`DELETE`.
-| Access-Control-Request-Headers | Indicates which HTTP headers will be used when the actual request is made. The value is set to [hotspot=22 file=0]`MyOwnHeader2`
+| Access-Control-Request-Method | HTTP method that will be used when the actual request is made. The value is set to [hotspot=20 file=0]`DELETE`.
+| Access-Control-Request-Headers | HTTP headers that will be used when the actual request is made. The value is set to [hotspot=22 file=0]`MyOwnHeader2`
 |===
 
 Expect the following response headers and values if the preflight CORS request is successful, and the server is correctly configured:
 
 |===
 | *Header* | *Value*
-| Access-Control-Allow-Max-Age | Indicates time in seconds that the preflight request can be cached. The value is set to [hotspot=23 file=0]`10`.
+| Access-Control-Allow-Max-Age | The number of seconds that the preflight request can be cached. The value is set to [hotspot=23 file=0]`10`.
 | Access-Control-Allow-Origin | Indicates whether the response can be shared with requesting code from the given origin (server name). anywebsiteyoulike.com
-| Access-Control-Allow-Methods | Indicates method(s) allowed when accessing a resource in rsponse to a preflight request. The values are set to [hotspot=20 file=0]`OPTIONS, DELETE`.
+| Access-Control-Allow-Methods | Method(s) allowed when accessing a resource in rsponse to a preflight request. The values are set to [hotspot=20 file=0]`OPTIONS, DELETE`.
 | Access-Control-Allow-Credentials | Indicates whether the response can be exposed to the frontend code. The value is set to [hotspot=21 file=0]`true`.
-| Access-Control-Allow-Headers | Indicates which HTTP headers can be used during actual request. The values are set to [hotspot=22 file=0]`MyOwnHeader1, MyOwnHeader2`.
+| Access-Control-Allow-Headers | HTTP headers that can be used during actual request. The values are set to [hotspot=22 file=0]`MyOwnHeader1, MyOwnHeader2`.
 |===
 
 The `Access-Control-Allow-Origin` header has a value of `anywebsiteyoulike.com`
