--- a/README.adoc
+++ b/README.adoc
@@ -159,9 +159,9 @@ Expect the following response headers and values if the simple CORS request is s
 
 |===
 | *Response Header* | *Response Value*
-| Access-Control-Allow-Origin | The expected response value indicates whether the response can be shared with requesting code from the given origin (server name).
-| Access-Control-Allow-Credentials | The expected response value indicates whether the response can be exposed to the frontend code.
-| Access-Control-Expose-Headers | The expected response value indicates the HTTP Headers that can be exposed.
+| Access-Control-Allow-Origin | Indicates whether the response can be shared with requesting code from the given origin (server name).
+| Access-Control-Allow-Credentials | Indicates whether the response can be exposed to the frontend code.
+| Access-Control-Expose-Headers | Indicates the HTTP Headers that can be exposed.
 |===
 
 Go to the `start/` directory and run the following command:
@@ -261,11 +261,11 @@ Expect the following response headers and values if the preflight CORS request i
 
 |===
 | *Response Header* | *Response Value*
-| Access-Control-Allow-Max-Age | The expected response value indicates number of seconds that the preflight request can be cached.
-| Access-Control-Allow-Origin | The expected response value indicates whether the response can be shared with requesting code from the given origin.
-| Access-Control-Allow-Methods | The expected response value indicates method(s) allowed when accessing a resource in rsponse to a preflight request. 
-| Access-Control-Allow-Credentials | The expected response value indicates whether the response can be exposed to the frontend code.
-| Access-Control-Allow-Headers | The expected response value indicates HTTP headers that can be used during actual request. 
+| Access-Control-Allow-Max-Age | Indicates number of seconds that the preflight request can be cached.
+| Access-Control-Allow-Origin | Indicates whether the response can be shared with requesting code from the given origin.
+| Access-Control-Allow-Methods | Indicates method(s) allowed when accessing a resource in rsponse to a preflight request. 
+| Access-Control-Allow-Credentials | Indicates whether the response can be exposed to the frontend code.
+| Access-Control-Allow-Headers | Indicates HTTP headers that can be used during actual request. 
 |===
 
 The `Access-Control-Allow-Origin` header has a value of `anywebsiteyoulike.com`
